Fixed error messaging

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -20,7 +20,7 @@
   <header class="nhsuk-header" role="banner" data-module="nhsuk-header">
   <div class="nhsuk-header__container nhsuk-width-container">
     <div class="nhsuk-header__service">
-      <a class="nhsuk-header__service-logo" href="#" aria-label="Manage patients homepage">
+      <a class="nhsuk-header__service-logo" href="/" aria-label="Manage patients homepage">
         <img src="/images/nfs-logo.jpg" alt="Logo" height="40" width="100">
         <!-- <svg class="nhsuk-header__logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 80"  focusable="false" role="img" aria-label="NHS">
           <title>NHS</title>
