--- a/app/views/national-faithful-number.html
+++ b/app/views/national-faithful-number.html
@@ -27,19 +27,21 @@
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-		{{ errorSummary({
-			titleText: "There is a problem",
-			descriptionText: "",
-			errorList: [
-				{
-				text: "Enter your national faithful number",
-				href: "#nfs-number"
-				}
-			]
-		}) }}
+		{% if errorMsg == true %}
+			{{ errorSummary({
+				titleText: "There is a problem",
+				descriptionText: "",
+				errorList: [
+					{
+					text: "Enter your national faithful number",
+					href: "#nfs-number"
+					}
+				]
+			}) }}
+		{% endif %}   
 
 		<form action="national-faithful-number" method="post">
-			{% if errorSummary %}
+			{% if errorMsg == true %}
 				{% set errorMessage = { text: "Enter your national faithful number" } %}
 			{% else %}
 				{% set errorMessage = null %}
