Added team question to help with end screen

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -37,16 +37,16 @@
 
 		<h2 class="nhsuk-heading-l">Before you start</h2>
 		
-		<p>You will need your:</p>
+		<p>You will need to know your:</p>
 
 		<ul class="nhsuk-list nhsuk-list--bullet">
-			<li>full team present</li>
+			<li>designated team</li>
 			<li>national faithful number</li>
 		</ul>
 
 		{{ button({
 			text: "Start now",
-			href: "national-faithful-number"
+			href: "what-team-are-you"
 		}) }}		
     </div>
   </div>
