--- a/app/views/national-faithful-number.html
+++ b/app/views/national-faithful-number.html
@@ -58,8 +58,9 @@
 					classes: "nhsuk-label--l"
 				},
 				id: "nfs-number",
-				name: "nfs-number",
-				errorMessage: errorMessage
+				name: "number",
+				errorMessage: errorMessage,
+				autocomplete: false
 			}) }}		
 
 			{{ button({
