--- a/app/views/what-team-are-you.html
+++ b/app/views/what-team-are-you.html
@@ -61,11 +61,11 @@
                 },
                 items: [
                     {
-                    value: "a",
+                    value: "A",
                     text: "Team A"
                     },
                     {
-                    value: "b",
+                    value: "B",
                     text: "Team B"
                     }
                 ]
