--- a/app/views/word-scramble.html
+++ b/app/views/word-scramble.html
@@ -79,42 +79,50 @@
                     {
                         name: "one",
                         label: " ",
-                        classes: "nhsuk-input--width-2"
+                        classes: "nhsuk-input--width-2",
+                        autocomplete: false
                     },
                     {
                         name: "two",
                         label: " ",
-                        classes: "nhsuk-input--width-2"
+                        classes: "nhsuk-input--width-2",
+                        autocomplete: false
                     },
                     {
                         name: "three",
                         label: " ",
-                        classes: "nhsuk-input--width-2"
+                        classes: "nhsuk-input--width-2",
+                        autocomplete: false
                     },
                     {
                         name: "four",
                         label: " ",
-                        classes: "nhsuk-input--width-2"
+                        classes: "nhsuk-input--width-2",
+                        autocomplete: false
                     },
                     {
                         name: "five",
                         label: " ",
-                        classes: "nhsuk-input--width-2"
+                        classes: "nhsuk-input--width-2",
+                        autocomplete: false
                     },
                     {
                         name: "six",
                         label: " ",
-                        classes: "nhsuk-input--width-2"
+                        classes: "nhsuk-input--width-2",
+                        autocomplete: false
                     },
                     {
                         name: "seven",
                         label: " ",
-                        classes: "nhsuk-input--width-2"
+                        classes: "nhsuk-input--width-2",
+                        autocomplete: false
                     },
                     {
                         name: "eight",
                         label: " ",
-                        classes: "nhsuk-input--width-2"
+                        classes: "nhsuk-input--width-2",
+                        autocomplete: false
                     }
                 ]
             }) }}
