CYA and success and failure pages working

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -2,3 +2,6 @@
 @import "nhsuk-frontend/dist/nhsuk";
 
 // Add your custom CSS/Sass styles below.
+.red-bg {
+    background-color: #d5281b !important;
+}
