All  change screens added

--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -41,7 +41,7 @@
                     actions: {
                         items: [
                         {
-                            href: "#",
+                            href: "change-what-team-are-you",
                             text: "Change",
                             visuallyHiddenText: "team"
                         }
@@ -58,7 +58,7 @@
                     actions: {
                         items: [
                         {
-                            href: "#",
+                            href: "change-national-faithful-number",
                             text: "Change",
                             visuallyHiddenText: "national faithful number"
                         }
@@ -75,7 +75,7 @@
                     actions: {
                         items: [
                         {
-                            href: "#",
+                            href: "change-animal-tangram-code",
                             text: "Change",
                             visuallyHiddenText: "tangram code"
                         }
@@ -92,7 +92,7 @@
                     actions: {
                         items: [
                         {
-                            href: "#",
+                            href: "change-word-scramble",
                             text: "Change",
                             visuallyHiddenText: "unscrambled word"
                         }
