--- a/app/views/fail.html
+++ b/app/views/fail.html
@@ -47,10 +47,10 @@
                     text: "Question"
                     },
                     {
-                    text: "Your answers"
+                    text: "Your answer"
                     },
                     {
-                    text: "Correct answers"
+                    text: "Correct answer"
                     }
                 ],
                 rows: [
@@ -103,10 +103,10 @@
                     text: "Question"
                     },
                     {
-                    text: "Your answers"
+                    text: "Your answer"
                     },
                     {
-                    text: "Correct answers"
+                    text: "Correct answer"
                     }
                 ],
                 rows: [
