--- a/app/views/change-what-team-are-you.html
+++ b/app/views/change-what-team-are-you.html
@@ -64,12 +64,12 @@
                 },
                 items: [
                     {
-                    value: "A",
-                    text: "Team A"
+                    value: "1",
+                    text: "Team 1"
                     },
                     {
-                    value: "B",
-                    text: "Team B"
+                    value: "2",
+                    text: "Team 2"
                     }
                 ]
             }) }}
