--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -75,7 +75,7 @@
                     actions: {
                         items: [
                         {
-                            href: "change-animal-tangram-code",
+                            href: "change-days-faithful",
                             text: "Change",
                             visuallyHiddenText: "tangram code"
                         }
