--- a/app/views/word-scramble.html
+++ b/app/views/word-scramble.html
@@ -21,7 +21,7 @@
 <!-- For adding a breadcrumb or back link -->
 {% block beforeContent %}
 	{{ backLink({
-		href: "animal-tangram-code",
+		href: "days-faithful",
 		text: "Back"
 	}) }}
 {% endblock %}
