--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -67,10 +67,10 @@
                 },
                 {
                     key: {
-                        text: "Tangram combination code"
+                        text: "How many days as a faithful"
                     },
                     value: {
-                        html: data.code
+                        html: data.days
                     },
                     actions: {
                         items: [
