Added hint text to faithful number and days faithful

--- a/app/views/days-faithful.html
+++ b/app/views/days-faithful.html
@@ -62,6 +62,9 @@
                         classes: "nhsuk-label--l"
                     }
                 },
+                hint: {
+                    text: "You can find this from the animal tangram task"
+                },
                 items: [
                     {
                         value: "121",
