--- a/app/views/national-faithful-number.html
+++ b/app/views/national-faithful-number.html
@@ -57,6 +57,9 @@
 					isPageHeading: true,
 					classes: "nhsuk-label--l"
 				},
+				hint: {
+                    text: "You can find this from the circle puzzle task"
+                },
 				id: "nfs-number",
 				name: "number",
 				errorMessage: errorMessage,
