CYA and fail fixes

--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -67,7 +67,7 @@
                 },
                 {
                     key: {
-                        text: "How many days as a faithful"
+                        text: "Days as a faithful"
                     },
                     value: {
                         html: data.days
@@ -84,7 +84,7 @@
                 },
                 {
                     key: {
-                        text: "Unscrambled word"
+                        text: "Unscrambled words"
                     },
                     value: {
                         html: data.one + data.two + data.three + data.four + data.five + data.six + data.seven + data.eight
