--- a/app/views/fail.html
+++ b/app/views/fail.html
@@ -67,7 +67,7 @@
                     ],
                     [
                     {
-                        text: "Tangram combination code"
+                        text: "Days as a faithful"
                     },
                     {
                         html: data.code
@@ -78,7 +78,7 @@
                     ],
                     [
                     {
-                        text: "Unscrambled word"
+                        text: "Unscrambled words"
                     },
                     {
                         html: data.one + data.two + data.three + data.four + data.five + data.six + data.seven + data.eight
@@ -123,7 +123,7 @@
                     ],
                     [
                     {
-                        text: "Tangram combination code"
+                        text: "Days as a faithful"
                     },
                     {
                         html: data.code
@@ -134,7 +134,7 @@
                     ],
                     [
                     {
-                        text: "Unscrambled word"
+                        text: "Unscrambled words"
                     },
                     {
                         html: data.one + data.two + data.three + data.four + data.five + data.six + data.seven + data.eight
