fail page dynamic table fix

--- a/app/views/fail.html
+++ b/app/views/fail.html
@@ -70,7 +70,7 @@
                         text: "Days as a faithful"
                     },
                     {
-                        html: data.code
+                        html: data.days
                     },
                     {
                         text: "111"
@@ -126,7 +126,7 @@
                         text: "Days as a faithful"
                     },
                     {
-                        html: data.code
+                        html: data.days
                     },
                     {
                         text: "147"
