--- a/app/views/what-team-are-you.html
+++ b/app/views/what-team-are-you.html
@@ -50,6 +50,7 @@
             {{ radios({
                 idPrefix: "team",
                 name: "team",
+                value: data.team,
                 errorMessage: errorMessage,
                 fieldset: {
                     legend: {
