--- a/app/views/success.html
+++ b/app/views/success.html
@@ -25,6 +25,7 @@
 
 
 {% block content %}
+
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
         {{ panel({
@@ -33,6 +34,166 @@
         }) }}
 
         <p>You have answered all the questions correctly, successfully avoiding sabotage by a traitor amongst your ranks.</p>
+
+
+<!-- TICK ICON -->
+        {% set tickIcon %}
+            <svg class="nhsuk-icon nhsuk-icon--tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" focusable="false" aria-hidden="true">
+                <path fill="#007f3b" d="M11.4 18.8a2 2 0 0 1-2.7.1h-.1L4 14.1a1.5 1.5 0 0 1 2.1-2L10 16l8.1-8.1a1.5 1.5 0 1 1 2.2 2l-8.9 9Z"></path>
+            </svg>
+        {% endset %}
+
+        <!-- CROSS ICON -->
+        {% set crossIcon %}
+            <svg class="nhsuk-icon nhsuk-icon--cross" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" focusable="false" aria-hidden="true">
+                <path fill="#d5281b" d="M17 18.5c-.4 0-.8-.1-1.1-.4l-10-10c-.6-.6-.6-1.6 0-2.1.6-.6 1.5-.6 2.1 0l10 10c.6.6.6 1.5 0 2.1-.3.3-.6.4-1 .4z M7 18.5c-.4 0-.8-.1-1.1-.4-.6-.6-.6-1.5 0-2.1l10-10c.6-.6 1.5-.6 2.1 0 .6.6.6 1.5 0 2.1l-10 10c-.3.3-.6.4-1 .4z"></path>
+            </svg>
+        {% endset %}
+
+
+        {% set numberIcon = crossIcon %}
+        {% set daysIcon = crossIcon %}
+        {% set wordsIcon = crossIcon %}
+
+        {% if data.team == "1" %}
+
+            {% if data.number === '925461738' %}
+                {% set numberIcon = tickIcon %}
+            {% endif %}
+
+            {% if data.daysFaithful === '111' %}
+                {% set daysIcon = tickIcon %}
+            {% endif %}
+
+            {% if data.wordOne === 'SPIRE' or data.wordOne === 'REACT' %}
+                {% if data.wordTwo === 'SPIRE' or data.wordTwo === '' %}
+                    {% set wordsIcon = tickIcon %}
+                {% endif %}
+            {% endif %}
+
+            <!-- 
+            
+                TEAM ONE ANSWERS
+                
+            -->
+            {{ table({
+                responsive: false,
+                panel: false,
+                caption: "Team 1 answers",
+                firstCellIsHeader: true,
+                head: [
+                    { text: 'Question' },
+                    { text: 'Your answer' },
+                    { text: 'Correct answer' },
+                    { html: '<span class="nhsuk-u-visually-hidden">Result</span>' }
+                ],
+                rows: [
+                    [
+                        { text: 'National faithful number' },
+                        { html: data.number },
+                        { text: '925461738' },
+                        { html: numberIcon }
+                    ],
+                    [
+                        { text: 'Days as a faithful' },
+                        { html: data.daysFaithful },
+                        { text: '111' },
+                        { html: daysIcon }
+                    ],
+                    [
+                        { text: 'Faithful code words' },
+                        { html: data.wordOne + ' ' + data.wordTwo },
+                        { text: 'REACT SPIRE' },
+                        { html: wordsIcon }
+                    ]
+                ]
+            }) }}
+        {% endif %}
+        
+        {% if data.team == "2" %}
+
+            {% if data.number === '925461738' %}
+                {% set numberIcon = tickIcon %}
+            {% endif %}
+
+            {% if data.daysFaithful === '147' %}
+                {% set daysIcon = tickIcon %}
+            {% endif %}
+
+            {% if data.wordOne === 'LASER' or data.wordOne === 'PLANE' %}
+                {% if data.wordTwo === 'LASER' or data.wordTwo === 'PLANE' %}
+                    {% set wordsIcon = tickIcon %}
+                {% endif %}
+            {% endif %}
+
+            <!-- 
+            
+                TEAM TWO ANSWERS
+
+            -->
+           {{ table({
+                responsive: false,
+                panel: false,
+                caption: "Team 1 answers",
+                firstCellIsHeader: true,
+                head: [
+                    { text: 'Question' },
+                    { text: 'Your answer' },
+                    { text: 'Correct answer' },
+                    { html: '<span class="nhsuk-u-visually-hidden">Result</span>' }
+                ],
+                rows: [
+                    [
+                        { text: 'National faithful number' },
+                        { html: data.number },
+                        { text: '925461738' },
+                        { html: numberIcon }
+                    ],
+                    [
+                        { text: 'Days as a faithful' },
+                        { html: data.daysFaithful },
+                        { text: '111' },
+                        { html: daysIcon }
+                    ],
+                    [
+                        { text: 'Faithful code words' },
+                        { html: data.wordOne + ' ' + data.wordTwo },
+                        { text: 'LASER PLANE' },
+                        { html: wordsIcon }
+                    ]
+                ]
+            }) }}
+        {% endif %}
+
+        <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
+        <script>
+
+          (function frame() {
+            confetti({
+              particleCount: 2,
+              angle: 60,
+              spread: 55,
+              origin: { x: 0 }
+            });
+
+            confetti({
+              particleCount: 2,
+              angle: 120,
+              spread: 55,
+              origin: { x: 1 }
+            });
+
+            requestAnimationFrame(frame);
+            
+          })();
+           
+        </script>
+
+
     </div>
 </div>
+
+
+
+
 {% endblock %}
